--- a/prompts/preprocess.yaml
+++ b/prompts/preprocess.yaml
@@ -246,13 +246,13 @@ wiki_pre_extract_score:
 
     - "extraction_reasoning": A brief explanation (1–3 sentences) of what makes the selected content relevant or not, and how you determined what to extract.
 
-    - "extracted_gold": (1–4 sentences) A distilled version of the **most relevant** content from the article_paragraph, based solely on what's in the text. Be specific and incldue key details.
+    - "extracted_gold": (0–10 sentences) A distilled version of the **most relevant** content from the article_paragraph, based solely on what's in the text. Be specific and incldue key details.
 
       - If the score is 1, return an empty string.
 
-      - If score is 2–5: Return 1–2 factual sentences from the text.
+      - If score is 2–5: Return 2-5 factual sentences from the text.
 
-      - If score is 6–10: Return 2–4 factual sentences from the text.
+      - If score is 6–10: Return 5–10 factual sentences from the text.
 
       - Do **not** add prefaces like “this is relevant to the question…” Just output the clearest, most concise nuggets of useful information. Do not reference the drivers.
 
@@ -267,12 +267,12 @@ wiki_pre_extract_score:
 
 wiki_pre_remove_irrelevant_info:
   system_message: >
-    You are a specialized AI assistant with expertise in filtering out irrelevant information from textual documents.
+    You are a specialized AI assistant with expertise in filtering out irrelevant information and vague information from textual documents.
     You focus on factual details and relevance.{{ think }}
   user_template: >
     Carefully review the provided 'extracted_gold' content in the context of the 'drivers'.
     Your task is to identify and remove any information that does not pertain to the 'drivers' or provide context for better understanding
-    the topic with respect to the 'drivers'. Focus only on what is explicitly stated, not inferred.
+    the topic with respect to the 'drivers'. Focus only on what is explicitly stated, not inferred. If something seems too vague, remove it.
 
     Return a valid JSON object with these exact fields:
 
@@ -286,6 +286,7 @@ wiki_pre_remove_irrelevant_info:
 
     - Relevance is determined by whether the content contextualizes the 'drivers'. It doesn't need to be directly about the drivers, 
     but it should provide useful background or context that helps understand the drivers better.
+
 
     <extracted_gold> {{ extracted_gold }} </extracted_gold>
 
@@ -311,11 +312,13 @@ wiki_pre_consolidate_summaries:
 
       - Be specific and include details. Include facts, dates, and numbers that are relevant to the drivers.
 
+      - Think through the order of the information you present.
+
     - "consolidated_summary": A well-structured summary (8-25 sentences) that integrates the key points from all provided 'wiki_sumamries' dictionary.
 
       - Focus on clarity and coherence, ensuring that the summary flows logically and captures the essence of the information.
 
-      - Do not include any prefaces or introductory phrases; just present the consolidated content directly. Avoid verbosity.
+      - Do not include any prefaces or introductory phrases; just present the consolidated content directly. Avoid verbosity. No intro or conclusion sentences.
 
       - Be specific and include details such as facts, dates, and numbers that are relevant.
 
@@ -323,7 +326,8 @@ wiki_pre_consolidate_summaries:
 
     - Use only the provided 'wiki_summaries' dictionary. Do NOT incorporate external facts or speculate.
 
-    - Ensure that the summary is comprehensive yet concise, avoiding unnecessary repetition or filler content. Avoid transition phrases.
+    - Ensure that the summary is comprehensive yet concise, avoiding unnecessary repetition or filler content. Avoid transition phrases. Exclude vague information.
+
 
     <wiki_summaries> {{ wiki_summaries }} </wiki_summaries>
 
