--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ Wikipedia-API==0.8.1
 beautifulsoup4==4.13.4
 pydantic==2.11.5
 openai==0.26.5
+tiktoken==0.9.0
 ollama==0.4.9
 #forecasting-tools==0.2.40
